Revise introduction and add coursework information
Updated personal introduction and coursework details.

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div id="Home" class="tabcontent">
             <h1>  About Me </h1>
             <img id ="proImage" src="ProfessionalPic.jpg" alt="Professional pic" style=" width: 45%; height: 40%;">
-            <p> Hello, welcome to my personal portfolio! My name is Ian and I am a current student at the 
-                University of Central Florida majoring in computer science. Since starting at UCF I have taken relevant coursework
-                related to python and C. To further evaluate, please go to my Projects tab. Thank you!
+            <p> Hey, Welcome to my paege! I'm Ian.
+                I’m currently studying Data Science at UCF, where I’ve been working with Python, C, and Java through coursework and hands-on projects.
+                Check out the Projects page to see what I’ve been creating!
             </p>
         </div>
 
@@ -127,6 +127,12 @@
                     <li>Understanding of Id and Class attributes</li>
                     <li>Basics of Responsive web development</li>
                     <li>Project 2</li>
+                </ol>
+                <li>Coursework</li>
+                <ol>
+                    Programming: CS1 (C), Object-Oriented Programming (Java)
+                    Math: Calculus I & II, Discrete Math I, Statistics I
+                    Upcoming: Linear Algebra, Data Graphics & Visualization, Calc III
                 </ol>
             </ul>
         </div>
