--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <button class="projlink" onclick="openProj(event, 'Project1')">Project 1</button>
             <button class="projlink" onclick="openProj(event, 'Project2')">Project 2</button>
             <button class="projlink" onclick="openProj(event, 'Project3')">Project 3</button>
-            <button class="projlink" onclick="openProj(event, 'skillset')">Skills Learned</button>
+            <button class="projlink" onclick="openProj(event, 'Aboutme')">About me</button>
+            <button class="projlink" onclick="openProj(event, '')">About me</button>
         </div>
 
         <!-- Project 1 content -->
@@ -106,30 +107,19 @@
         </div>
 
         <!-- Skillset content -->
-        <div id="skillset" class="projcontent">
-            <h1>Proficiency</h1>
-            <p>I have aquired a good grasp on <em> python, html, and css</em> through these projects</p>
+        <div id="Aboutme" class="projcontent">
 
-            <h2>Skills</h2>
-            <ul>
-                <li>Python</li>
-                <ol>
-                    <li>Basic python from <em>datatypes to lists of dictionaries</em></li>
-                    <li>Objects and classes</li>
-                    <li>Project 1</li>
-                </ol>
-                <li>html and css</li>
-                <ol>
-                    <li>Understanding of the internet, web, browser, and URLs</li>
-                    <li>Knowledge of important elements/tags</li>
-                    <li>Images, image maps, links</li>
-                    <li>Understanding of Id and Class attributes</li>
-                    <li>Basics of Responsive web development</li>
-                    <li>Project 2</li>
-                </ol>
+                <p>
+                  Hello again, now to explain a little more about myself. I’m currently a Data Science student at the 
+                  University of Central Florida with experience in Python, C, and Java programming.
+                  I enjoy working on beginner software projects, data cleaning, and analysis projects that help me deepen
+                  my understanding of algorithms and problem-solving. I’m currently learning more about statistics, data workflows,
+                  and software engineering fundamentals, and I’m actively building projects to grow my skills. I’m seeking opportunities
+                  to apply what I’m learning in real-world environments through internships and collaborative work.  
+                </p>
                 <li>Coursework</li>
                 <ol>
-                    Programming: CS1 (C), Object-Oriented Programming (Java)
+                    Programming: CS1 (C) - UCF's Version of Data Structures and Algorithms taught in C, Object-Oriented Programming (Java)
                     Math: Calculus I & II, Discrete Math I, Statistics I
                     Upcoming: Linear Algebra, Data Graphics & Visualization, Calc III
                 </ol>
